plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0.24,6.2)'
    id 'org.spongepowered.mixin' version '0.7.+'
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
}

final def lib = project(':_Lollipop')

version = "${minecraft_version}-${mod_version}"
group = mod_group

base {
    archivesName = mod_name
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}

minecraft {
    mappings channel: mappings_channel, version: mappings_version
    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                losttrinkets {
                    source sourceSets.main
                }
                lollipop {
                    source lib.sourceSets.main
                }
            }
        }

        client {
        }

        server {
        }
    }
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
            exclude 'owmii/losttrinkets/client/compat/jei/**'
            exclude 'owmii/losttrinkets/core/mixin/**'
        }
    }
}

repositories {
    mavenCentral()
    maven {
        url = 'https://repo.spongepowered.org/repository/maven-public/'
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    implementation lib
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

def replaceProperties = [
        minecraft_version       : minecraft_version,
        forge_version           : forge_version,
        loader_version_range    : loader_version_range,
        minecraft_version_range : minecraft_version_range,
        forge_version_range     : forge_version_range,
        mod_id                  : mod_id,
        mod_name                : mod_name,
        mod_license             : mod_license,
        mod_version             : mod_version,
        mod_authors             : mod_authors,
        mod_description         : mod_description,
        lollipop_version_range  : lollipop_version_range
]

tasks.named('processResources', ProcessResources).configure {
    inputs.properties replaceProperties
    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

jar {
    manifest {
        attributes([
                "MixinConfigs"            : "${mod_id}.mixins.json",
                "Specification-Title"     : mod_name,
                "Specification-Vendor"    : mod_group,
                "Specification-Version"   : mod_version,
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : archiveVersion,
                "Implementation-Vendor"   : mod_group,
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}
